<resources>
    <string name="app_name">Dompet</string>
    <string name="title_activity_sign_up">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in">Sign In or register</string>


    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_sign_in">Sign In</string>

    <string name="gk_punya_akun">Do not have an account?</string>
</resources>
