<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.farenza.dompet.SignUpActivity"
    android:background="@drawable/background_signup">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_margin="16dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/IVLOGO_signup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/ic_launcher"/>
        <TextView
            android:id="@+id/TVSIGNUP_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Sign Up"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/IVLOGO_signup"
            android:textColor="@color/putih"/>

        <LinearLayout
            android:id="@+id/email_signup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TVSIGNUP_signup"
            android:background="@drawable/background_form"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="45dp"
            android:gravity="center"
            android:orientation="vertical"
            android:elevation="20dp"
            android:layout_margin="16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/FULL_NAME"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_fullname"
                    android:inputType="text"
                    android:textColor="@color/teal"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/teal"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/title_activity_sign_up"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/teal"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"

            android:text="@string/action_sign_up"
            android:layout_below="@id/email_signup_form"
            android:textStyle="bold"
            android:background="@drawable/button_signupin"/>
    </RelativeLayout>
</LinearLayout>
