<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.farenza.dompet.SignInActivity"
    android:background="@drawable/background_signup">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/IVLOGO_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:layout_marginEnd="-10dp"
                android:background="@drawable/ic_androidstudioprojects"/>
        </LinearLayout>
        <TextView
            android:id="@+id/TVSIGNIN_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Sign Up"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/IVLOGO_signin"
            android:textColor="@color/putih"
            android:textSize="15sp"/>

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TVSIGNIN_signin"
            android:background="@drawable/background_form"
            android:paddingRight="35dp"
            android:paddingLeft="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="45dp"
            android:elevation="20dp"
            android:layout_margin="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/SUPPORT_FIRST_SIGNIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/teal"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/IVLOGO_EMAIL_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_email"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@id/SUPPORT_FIRST_SIGNIN"
                android:layout_marginBottom="6dp"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/SUPPORT_SECOND_SIGNIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/SUPPORT_FIRST_SIGNIN"
                android:layout_marginEnd="25dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/teal"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/IVLOGO_PASSWORD_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/logo_password"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@id/SUPPORT_SECOND_SIGNIN"
                android:layout_marginBottom="3dp"/>


        </RelativeLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_login_form"
            android:layout_marginTop="16dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:background="@drawable/button_signupin"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gk_punya_akun"
                android:textColor="#009688"/>
            <TextView
                android:id="@+id/TV_LINK_SIGNUP_SIGNIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Sign up"
                android:textColor="#00695C"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
